chore: 사이프레스를 세팅한다

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,9 +11,9 @@
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true,
+    "isolatedModules": false,
     "jsx": "preserve",
-    "types": ["hast"]
+    "types": ["hast", "cypress", "node"]
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
