--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/node": "18.15.5",
     "@types/react": "18.0.28",
     "babel-loader": "^8.3.0",
+    "cypress": "^12.8.1",
     "typescript": "5.0.2"
   }
 }
