--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Cypress Tests
+name: main
 
 on: [push]
 
@@ -13,5 +13,6 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v5.5.1 # use the explicit version number
         with:
+          component: true
           build: npm run build
           start: npm start
