--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@types/react": "18.0.28",
     "babel-loader": "^8.3.0",
     "cypress": "^12.8.1",
+    "eslint": "8.38.0",
+    "eslint-config-next": "13.3.0",
     "typescript": "5.0.2"
   }
 }
