--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "start": "next start",
     "lint": "next lint",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "prepare": "husky install"
   },
   "resolutions": {
     "@storybook/react-docgen-typescript-plugin": "1.0.6--canary.9.cd77847.0"
@@ -38,6 +39,7 @@
     "cypress": "^12.8.1",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "husky": "^8.0.3",
     "typescript": "5.0.2"
   }
 }
