--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -13,13 +13,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Cypress run
+      - name: End to end test
         # Uses the official Cypress GitHub action https://github.com/cypress-io/github-action
         uses: cypress-io/github-action@v5.5.1
         with:
           # Starts web server for E2E tests - replace with your own server invocation
           # https://docs.cypress.io/guides/continuous-integration/introduction#Boot-your-server
-          component: true
           build: npm run build
           start: npm start
           # Records to Cypress Cloud
